# 3d_Viewer

./: Dynamic_Array_.c  Dynamic_Array_.h  Makefile  README.md  README.txt  affine_transfomation_.c  affine_transfomation_.h  main.c  parser_.c  parser_.h  vertex_.h
3dViewer/: CMakeLists.txt  gifcreator.cpp  gifcreator.h  gradienttex.cpp  gradienttex.h  main.cpp  main.qml  modeiinstance.cpp  modeiinstance.h  modelview.cpp  modelview.h  saveload.cpp  saveload.h
models/: xyu
tests/: parser_tst_.c  viewer_tst.h
